Change modal-form placeholder

--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
 				</tfoot>
 			</table>
 			<form class="modal-form" action="">
-				<input class="modal-input" type="text" placeholder="Имя" name="nameCustomer">
-				<input class="modal-input" type="text" placeholder="Телефон" name="phoneCustomer">
+				<input class="modal-input" type="text" placeholder="name" name="nameCustomer">
+				<input class="modal-input" type="text" placeholder="phone" name="phoneCustomer">
 				<button class="button cart-buy">	
 					<span class="button-text">Checkout</span>
 				</button>
